@@ -1,3 +1,9 @@
+2005-01-03  Bruno Haible  <bruno@clisp.org>
+
+	* spvw.d (SP_ueber, STACK_ueber): Output a newline before reset(1).
+	* spvw_alloca.d (malloca): Likewise.
+	* spvw_allocate.d (error_speicher_voll): Likewise.
+
 2005-01-02  Bruno Haible  <bruno@clisp.org>
 
 	* debug.d (SYS::DESCRIBE-FRAME): Call print_stack_trace with the same
